# crates/authn_service/openapi.yaml
@@ -9,61 +9,27 @@ servers:
 - url: http://localhost:3000
   description: Development
 paths:
-  /v1/authns:
-    get:
-      tags:
-      - Books
-      operationId: list
-      parameters:
-      - name: per_page
-        in: query
-        required: false
-        schema:
-          type: integer
-          default: 10
-          minimum: 0
-        example: 10
-      - name: page
-        in: query
-        required: false
-        schema:
-          type: integer
-          default: 1
-          minimum: 0
-        example: 1
-      responses:
-        '200':
-          description: A successful list read
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Book'
-        '500':
-          description: An internal failure
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
+  /v1/register:
     post:
       tags:
-      - Books
-      operationId: create
+      - auth
+      operationId: register
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/BookRequest'
+              $ref: '#/components/schemas/RegistrationRequest'
         required: true
       responses:
-        '201':
-          description: A successful create
+        '200':
+          description: A successful registration
+        '400':
+          description: An invalid payload
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Book'
-        '400':
+                $ref: '#/components/schemas/ErrorResponse'
+        '409':
           description: An invalid payload
           content:
             application/json:
@@ -75,100 +41,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ValidationErrorResponse'
-        '500':
-          description: An internal failure
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-  /v1/authns/{id}:
-    get:
-      tags:
-      - Books
-      operationId: read
-      parameters:
-      - name: id
-        in: path
-        description: The UUIDv7 identifier of the authn
-        required: true
-        schema:
-          type: string
-          format: uuid
-      responses:
-        '200':
-          description: A successful read
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Book'
-        '404':
-          description: A record could not be found
-        '500':
-          description: An internal failure
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-    put:
-      tags:
-      - Books
-      operationId: update
-      parameters:
-      - name: id
-        in: path
-        description: The UUIDv7 identifier of the authn
-        required: true
-        schema:
-          type: string
-          format: uuid
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/BookRequest'
-        required: true
-      responses:
-        '200':
-          description: A successful update
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Book'
-        '400':
-          description: An invalid payload
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '404':
-          description: A record could not be found
-        '422':
-          description: An unprocessable payload
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ValidationErrorResponse'
-        '500':
-          description: An internal failure
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-    delete:
-      tags:
-      - Books
-      operationId: delete
-      parameters:
-      - name: id
-        in: path
-        description: The UUIDv7 identifier of the authn
-        required: true
-        schema:
-          type: string
-          format: uuid
-      responses:
-        '204':
-          description: A successful delete
         '500':
           description: An internal failure
           content:
@@ -177,91 +49,6 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
 components:
   schemas:
-    Book:
-      type: object
-      required:
-      - created_at
-      - updated_at
-      - id
-      - published_date
-      - status
-      - title
-      properties:
-        created_at:
-          type: string
-          format: date-time
-          examples:
-          - 2027-01-01T00:00:00.123456Z
-        description:
-          type:
-          - string
-          - 'null'
-          examples:
-          - It is the seventh and final novel in the Harry Potter series
-        id:
-          type: string
-          format: uuid
-          examples:
-          - 01bbbbbb-bbbb-7bbb-8bbb-bbbbbbbbbbbb
-        image_url:
-          type:
-          - string
-          - 'null'
-          examples:
-          - https://upload.wikimedia.org/wikipedia/en/a/a9/Harry_Potter_and_the_Deathly_Hallows.jpg
-        published_date:
-          type: string
-          format: date
-          examples:
-          - 2007-07-21
-        status:
-          $ref: '#/components/schemas/BookStatus'
-        title:
-          type: string
-          examples:
-          - Harry Potter and the Deathly Hallows
-        updated_at:
-          type: string
-          format: date-time
-          examples:
-          - 2027-01-01T00:00:00.123456Z
-    BookRequest:
-      type: object
-      required:
-      - title
-      - published_date
-      - status
-      properties:
-        description:
-          type:
-          - string
-          - 'null'
-          examples:
-          - It is the seventh and final novel in the Harry Potter series
-        image_url:
-          type:
-          - string
-          - 'null'
-          examples:
-          - https://upload.wikimedia.org/wikipedia/en/a/a9/Harry_Potter_and_the_Deathly_Hallows.jpg
-        published_date:
-          type: string
-          format: date
-          examples:
-          - 2007-07-21
-        status:
-          $ref: '#/components/schemas/BookStatus'
-        title:
-          type: string
-          examples:
-          - Harry Potter and the Deathly Hallows
-          maxLength: 255
-          minLength: 1
-    BookStatus:
-      type: string
-      enum:
-      - pending
-      - verified
     Error:
       type: string
       enum:
@@ -269,6 +56,10 @@ components:
       - DB_FETCH_FAILED
       - DB_UPDATE_FAILED
       - DB_DELETE_FAILED
+      - PASSWORD_HASH_CONTEXT_FAILED
+      - PASSWORD_HASH_ACTION_FAILED
+      - TIME_GEN_FAILED
+      - DUPLICATE_ENTITY
     ErrorResponse:
       type: object
       required:
@@ -278,6 +69,29 @@ components:
           $ref: '#/components/schemas/Error'
       examples:
       - '{"error": "DB_FETCH_FAILED"}'
+    RegistrationRequest:
+      type: object
+      required:
+      - email
+      - password
+      - password_confirm
+      properties:
+        email:
+          type: string
+          examples:
+          - user@mail.com
+        password:
+          type: string
+          examples:
+          - P@ssword123!
+          maxLength: 128
+          minLength: 12
+        password_confirm:
+          type: string
+          examples:
+          - P@ssword123!
+          maxLength: 128
+          minLength: 12
     ValidationErrorResponse:
       type: object
       required:
