# crates/authn_service/src/models/mod.rs
@@ -1,5 +1,4 @@
 mod access_token;
-mod book;
 mod oauth_challenge;
 mod refresh_token;
 mod registration;
@@ -12,7 +11,6 @@ mod user_password;
 mod webauthn_challenge;
 
 pub use access_token::AccessTokenResponse;
-pub use book::{Book, BookStatus};
 pub use oauth_challenge::OauthChallenge;
 pub use refresh_token::RefreshToken;
 pub use registration::Registration;
